--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,4 +59,6 @@
 //
 // -----------------------------------------------------------------------------
 
+@import "components.shopitem";
+@import "components.rating";
 @import "components.carbonad";
